--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -21,8 +21,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Ant Design Pro</title>
-    <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
+    <title>佳美嘉直营店小程序</title>
+    <link rel="icon" href="https://oss.jmjcm.com/frontend.basic/favicon.ico" />
   </head>
   <body>
     <noscript>Out-of-the-box mid-stage front/design solution!</noscript>
