--- a/src/style/basiclLayout.less
+++ b/src/style/basiclLayout.less
@@ -1,3 +1,5 @@
+@import './sprites.less';
+
 .ant-pro-top-nav-header-main {
   padding: 0;
 
@@ -9,4 +11,8 @@
     width: 207px;
     height: 100%;
   }
+}
+
+.ant-menu /deep/.crm {
+  .sprite(@crm);
 }
